app/bin/main/styles/MahasiswaScene.css
/* GLOBAL STYLE START */
.backgroundApp {
  -fx-background-color: #001f3f;
}

.header {
  -fx-padding: 15px 38px;
  -fx-spacing: 125px;
}

.header > Label {
  -fx-text-fill: white;
  -fx-font-size: 52px;
  -fx-font-weight: bold;
}
/* GLOBAL STYLE END */

/* NAVBAR START */
.containerNavbar {
  -fx-background-color: #001f3f;
  -fx-pref-height: 600px;
  -fx-spacing: 209px;
}

.containerNavbar > .containerNavbarMenu {
  -fx-spacing: 10px;
}

.containerNavbar > .containerNavbarMenu > Button {
  -fx-pref-width: 180px;
  -fx-padding: 15px 0px;
  -fx-background-color: #001f3f;
  -fx-font-weight: bold;
  -fx-text-fill: rgb(228, 228, 228);
  -fx-font-size: 16px;
}

.containerNavbar > .containerNavbarMenu > Button:hover {
  -fx-cursor: hand;
  -fx-background-color: #126fcd;
  -fx-text-fill: rgb(255, 255, 255) !important;
  -fx-border-color: rgb(156, 156, 156);
  -fx-border-width: 1px;
}

.containerNavbar > .containerNavbarFooter {
  -fx-spacing: 2px;
}

.containerNavbar > .containerNavbarFooter > Button {
  -fx-pref-width: 180px;
  -fx-padding: 12px 0px;
  -fx-background-color: rgb(197, 14, 14);
  -fx-font-weight: bold;
  -fx-text-fill: rgb(228, 228, 228);
  -fx-font-size: 16px;
}

.containerNavbar > .containerNavbarFooter > Button:hover {
  -fx-cursor: hand;
  -fx-background-color: rgb(255, 0, 0);
  -fx-text-fill: rgb(255, 255, 255) !important;
  -fx-border-width: 1px;
  -fx-border-color: rgb(114, 5, 56);
}

.containerNavbar > .containerNavbarFooter > .activeNav {
  -fx-background-color: #176ec5;
}

.containerNavbar > .containerNavbarFooter > .toContactAdminScene {
  -fx-background-color: #011c37;
}

.containerNavbar > .containerNavbarFooter > .toContactAdminScene:hover {
  -fx-cursor: hand;
  -fx-background-color: #0080ff;
  -fx-text-fill: rgb(255, 255, 255) !important;
  -fx-border-width: 1px;
  -fx-border-color: rgb(0, 255, 229);
}
/* NAVBAR END */

/* HOMEPAGE SCENE START */
.containerContent {
  -fx-pref-width: 580px;
  -fx-padding: 50px 0px;
  -fx-spacing: 40px;
  -fx-background-color: rgb(228, 228, 228);
}

.containerContent > .containerProfile {
  -fx-spacing: 20px;
}

.containerContent > .containerProfile > Label {
  -fx-font-weight: bold;
  -fx-text-fill: rgb(70, 70, 70);
  -fx-font-size: 24px;
}

.containerContent > .containerProfile > .bukuDipinjam {
  -fx-font-size: 18px;
}
/* HOMEPAGE SCENE END */

/* BOOK CONTAINER VIEW START */
.containerContentBook {
  -fx-pref-width: 580px;
  -fx-padding: 10px 0px;
  -fx-spacing: 10px;
  -fx-background-color: rgb(228, 228, 228);
}

.containerContentBook > Label {
  -fx-text-fill: rgb(0, 51, 117);
  -fx-font-size: 32px;
  -fx-font-weight: bold;
}

.table-view .column-header {
  -fx-background-color: #2c3e50;
  -fx-border-color: rgb(228, 228, 228);
  -fx-border-width: 1px;
}

.table-view .column-header .label {
  -fx-text-fill: white;
  -fx-font-weight: bold;
}

.table-view .table-row:odd {
  -fx-background-color: #ecf0f1;
}

.table-view .table-row:even {
  -fx-background-color: #dcdde1;
}

.table-view .table-row-cell:hover {
  -fx-background-color: #bdc3c7;
}

.table-view .table-row-cell {
  -fx-font-size: 12px;
}

.table-view .table-cell {
  -fx-table-cell-border-color: transparent;
  -fx-alignment: CENTER;
}
/* BOOK CONTAINER VIEW END */

/* BOOK LIST SCENE START */
.tableBook {
  -fx-background-color: white;
  -fx-font-size: 14px;
}

.columnNo {
  -fx-pref-width: 50px;
  -fx-font-size: 11px;
}
.columnJudul {
  -fx-pref-width: 192px;
}
.columnPengarang {
  -fx-pref-width: 140px;
}
.columnPenerbit {
  -fx-pref-width: 100px;
}
.columnTahun {
  -fx-pref-width: 90px;
  -fx-font-size: 11px;
}
/* BOOK LIST SCENE END */

/* BORROW BOOK SCENE START */
.tableBorrowBook {
  -fx-background-color: white;
  -fx-font-size: 16px;
}

.columnBorrowNo {
  -fx-pref-width: 50px;
}
.columnBorrowJudul {
  -fx-pref-width: 252px;
}
.columnBorrowPengarang {
  -fx-pref-width: 170px;
}
.columnBorrowStok {
  -fx-pref-width: 100px;
}

.containerFooterContent {
  -fx-padding: 10px 0px;
  -fx-spacing: 20px;
}

.containerFooterContent > Label {
  -fx-pref-width: 180px;
  -fx-pref-height: 60px;
  -fx-font-weight: bold;
  -fx-text-fill: rgb(61, 61, 61);
  -fx-font-size: 14px;
  -fx-background-color: rgb(219, 188, 10);
  -fx-padding: 0px 20px;
  -fx-background-radius: 10px;
  -fx-alignment: CENTER;
  -fx-text-alignment: CENTER;
  -fx-wrap-text: true;
}

.containerFooterContent > .bookSelectionSelected {
  -fx-background-color: rgb(32, 151, 2);
  -fx-text-fill: rgb(255, 255, 255);
}

.containerFooterContent > .bookSelectionLoading {
  -fx-background-color: rgb(36, 36, 36);
  -fx-text-fill: rgb(255, 255, 255);
}

.containerFooterContent > .bookSelectionReturn {
  -fx-background-color: rgb(219, 188, 10);
  -fx-text-fill: rgb(255, 255, 255);
}

.containerFooterContent > .bookSelectionFailed {
  -fx-background-color: rgb(185, 10, 10);
  -fx-text-fill: rgb(255, 255, 255);
}

.containerFooterContent > .borrowBookStatusLoading {
  -fx-background-color: rgb(49, 49, 49);
  -fx-text-fill: rgb(255, 255, 255);
}

.containerFooterContent > .borrowBookStatusSuccess {
  -fx-background-color: rgb(32, 151, 2);
  -fx-text-fill: rgb(255, 255, 255);
}

.containerFooterContent > .borrowBookStatusReturn {
  -fx-background-color: rgb(219, 188, 10);
  -fx-text-fill: rgb(255, 255, 255);
}

.containerFooterContent > .borrowBookStatusFailed {
  -fx-background-color: rgb(185, 10, 10);
  -fx-text-fill: rgb(255, 255, 255);
}

.containerFooterContent > Button {
  -fx-padding: 12px 10px;
  -fx-background-color: rgb(50, 194, 14);
  -fx-font-weight: bold;
  -fx-text-fill: rgb(228, 228, 228);
  -fx-font-size: 14px;
  -fx-border-color: gold;
  -fx-border-width: 3px;
  -fx-border-radius: 12px;
  -fx-background-radius: 10px;
  -fx-text-alignment: CENTER;
}

.containerFooterContent > Button:hover {
  -fx-cursor: hand;
  -fx-background-color: rgb(51, 255, 0);
  -fx-text-fill: rgb(255, 255, 255) !important;
  -fx-border-width: 3px;
  -fx-border-color: rgb(255, 251, 0);
}
/* BORROW BOOK SCENE END */

